--- a/cloud-storage-client/pom.xml
+++ b/cloud-storage-client/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>cloud-storage-client</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.geekbrains.ru</groupId>
+            <artifactId>cloud-storage-common</artifactId>
+            <version>1</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
