--- a/cloud-storage-server/pom.xml
+++ b/cloud-storage-server/pom.xml
@@ -10,10 +10,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>cloud-storage-server</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.geekbrains.ru</groupId>
+            <artifactId>cloud-storage-common</artifactId>
+            <version>1</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
-        <maven.compiler.source>15</maven.compiler.source>
-        <maven.compiler.target>15</maven.compiler.target>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
     <build>
